# mono-expenses

./: .gitignore  README.md  env.example  main.py  pyproject.toml  useful_links.txt
mono-expenses/: __main__.py  load_data.sql  schema.sql  statements_example.json  statements_example_to_insert.json
